--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-white: #fff;
 $color-grey: #777;  
+$color-black: #000;
 
 .header {
     height: 95vh;
@@ -15,57 +16,50 @@ $color-grey: #777;
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%)
-  
-  
-}
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-.logo-box{
-    position: absolute;
-    top: 40px;
-    left: 40px;
-}
-  
-.logo {
-    height: 80px;
-    width: 80px;
-}
-  
-.text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    
+    & .logo-box{
+        position: absolute;
+        top: 40px;
+        left: 40px;
+    }
+
+    & .logo{
+        height: 80px;
+        width: 80px;
+    }
+
+    & .text-box{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
   
 .heading-primary{
     color: $color-white;
-    text-transform: uppercase;
-    backface-visibility: hidden;
+    text-transform: uppercase;    backface-visibility: hidden;
     margin-bottom: 60px;  
+
+    & .heading-primary-main{
+        display: block;
+        font-size: 60px;
+        font-weight: 400;
+        letter-spacing: 35px;
+        animation: moveInLeft 2s ease-out;
+    }
+
+    & .heading-primary-sub{
+        display: block;
+        font-size: 20px;
+        font-weight: 700;
+        letter-spacing: 17.4px;
+        animation: moveInRight 2s ease-out;
+    }
 }
-  
-.heading-primary-main{
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 35px;
-  
-    animation: moveInLeft 2s ease-out;
-}
-  
-.heading-primary-sub{
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 17.4px;
-  
-    animation: moveInRight 2s ease-out;
-}
-  
-  
+
 @keyframes moveInLeft {
     0% {
       opacity: 0;
@@ -110,59 +104,59 @@ $color-grey: #777;
       opacity: 1;
       transform: translate(0)
     }
-  }
-  
-.btn:link, 
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: relative;
-    
 }
-  
-.btn-white {
-    background-color: $color-white;
-    color:$color-grey;
-  }
-  
-.btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0, .2);
+
+.btn{
+    &:link, 
+      :visited{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 15px 40px;
+        display: inline-block;
+        border-radius: 100px;
+        transition: all .2s;
+        position: relative;
+    }   
+
+    &:link, 
+      :visited{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 15px 40px;
+        display: inline-block;
+        border-radius: 100px;
+        transition: all .2s;
+        position: relative;
+        
+    }
+
+    &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba($color-black, .2);
+        &::after{
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
+
+    &:active{
+        transform: translateY(-1px);
+        box-shadow: 0 5px 10px rgba($color-black, .2);
+    }
+
 }
-  
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0, .2);
-}
-  
-.btn::after{
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    lefT: 0;
-    z-index: -1;
-    transition: all .4s;
-    
-  }
-  
-.btn-white::after{
-    background-color: $color-white;
-}
-  
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
-  
+
 .btn-animated{
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
+
+
+.btn-white {
+    background-color: $color-white;
+    color:$color-grey;
+    &::after{
+        background-color: $color-white
+    }
+}
+  
