--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,162 +1,16 @@
+@import "./abstracts/functions";
+@import "./abstracts/mixins";
+@import "./abstracts/variables";
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-white: #fff;
-$color-grey: #777;  
-$color-black: #000;
+@import "./base/base";
+@import "./base/animations";
+@import "./base/typography";
+@import "./base/utilities";
 
-.header {
-    height: 95vh;
-    background-image: linear-gradient(
-                          to right bottom,
-                          rgba($color-primary-light, 0.8),
-                          rgba($color-primary-dark, 0.8)), 
-                          url(../images/tree.jpg);
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+@import "./components/button";
 
-    & .logo-box{
-        position: absolute;
-        top: 40px;
-        left: 40px;
-    }
+@import "./layout/header";
 
-    & .logo{
-        height: 80px;
-        width: 80px;
-    }
+@import "./pages/home";
 
-    & .text-box{
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-}
-  
-.heading-primary{
-    color: $color-white;
-    text-transform: uppercase;    backface-visibility: hidden;
-    margin-bottom: 60px;  
-
-    & .heading-primary-main{
-        display: block;
-        font-size: 60px;
-        font-weight: 400;
-        letter-spacing: 35px;
-        animation: moveInLeft 2s ease-out;
-    }
-
-    & .heading-primary-sub{
-        display: block;
-        font-size: 20px;
-        font-weight: 700;
-        letter-spacing: 17.4px;
-        animation: moveInRight 2s ease-out;
-    }
-}
-
-@keyframes moveInLeft {
-    0% {
-      opacity: 0;
-      transform: translateX(-100px);
-    }
-  
-    50%{
-      opacity: .5;
-      transform: translateX(50px);
-    }
-  
-    100%{
-      opacity: 1;
-      transform: translate(0)
-    }
-}
-  
-@keyframes moveInRight {
-    0% {
-      opacity: 0;
-      transform: translateX(100px);
-    }
-  
-    50%{
-      opacity: .5;
-      transform: translateX(-50px);
-    }
-  
-    100%{
-      opacity: 1;
-      transform: translate(0)
-    }
-}
-  
-@keyframes moveInBottom {
-    0% {
-      opacity: 0;
-      transform: translateY(30px);
-    }
-  
-    100%{
-      opacity: 1;
-      transform: translate(0)
-    }
-}
-
-.btn{
-    &:link, 
-      :visited{
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 15px 40px;
-        display: inline-block;
-        border-radius: 100px;
-        transition: all .2s;
-        position: relative;
-    }   
-
-    &:link, 
-      :visited{
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 15px 40px;
-        display: inline-block;
-        border-radius: 100px;
-        transition: all .2s;
-        position: relative;
-        
-    }
-
-    &:hover{
-        transform: translateY(-3px);
-        box-shadow: 0 10px 20px rgba($color-black, .2);
-        &::after{
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
-    }
-
-    &:active{
-        transform: translateY(-1px);
-        box-shadow: 0 5px 10px rgba($color-black, .2);
-    }
-
-}
-
-.btn-animated{
-    animation: moveInBottom .5s ease-out .75s;
-    animation-fill-mode: backwards;
-}
-
-
-.btn-white {
-    background-color: $color-white;
-    color:$color-grey;
-    &::after{
-        background-color: $color-white
-    }
-}
-  
+// Video 33
