--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,26 @@
     opacity: 1;
     transform: translate(0); } }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 .btn:link,
 .btn :visited {
   text-transform: uppercase;
@@ -71,7 +91,6 @@
 
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -80,8 +99,7 @@
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    float: left;
-    border: 1px solid black; }
+    float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
   .row .col-1-of-2 {
@@ -135,3 +153,8 @@
     font-weight: 700;
     letter-spacing: 17.4px;
     animation: moveInRight 2s ease-out; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
