--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -4,7 +4,9 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-white: #fff;
 $color-grey: #777;  
+$color-grey-light-1: #f7f7f7;
 $color-black: #000;
+
 
 // ***** GRID *****
 $grid-width: 114rem;
