--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,8 @@
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  /*font-size: 16px;*/
   line-height: 1.7;
-  color: #777;
-  padding: 30px;
+  color: $color-grey-dark;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
