--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -46,7 +46,7 @@
 
 .btn-white {
     background-color: $color-white;
-    color:$color-grey;
+    color:$color-grey-dark;
     &::after{
         background-color: $color-white
     }
