--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -1,45 +1,43 @@
 @keyframes moveInLeft {
-    0% {
+  0% {
       opacity: 0;
-      transform: translateX(-100px);
-    }
-  
-    50%{
-      opacity: .5;
-      transform: translateX(50px);
-    }
-  
-    100%{
+      transform: translateX(-10rem);
+  }
+
+  80% {
+      transform: translateX(1rem);
+  }
+
+  100% {
       opacity: 1;
-      transform: translate(0)
-    }
+      transform: translate(0);
+  }
 }
-  
+
 @keyframes moveInRight {
-    0% {
+  0% {
       opacity: 0;
-      transform: translateX(100px);
-    }
-  
-    50%{
-      opacity: .5;
-      transform: translateX(-50px);
-    }
-  
-    100%{
+      transform: translateX(10rem);
+  }
+
+  80% {
+      transform: translateX(-1rem);
+  }
+
+  100% {
       opacity: 1;
-      transform: translate(0)
-    }
+      transform: translate(0);
+  }
 }
-  
+
 @keyframes moveInBottom {
-    0% {
+  0% {
       opacity: 0;
-      transform: translateY(30px);
-    }
-  
-    100%{
+      transform: translateY(3rem);
+  }
+
+  100% {
       opacity: 1;
-      transform: translate(0)
-    }
+      transform: translate(0);
+  }
 }
