--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -62,17 +62,17 @@
         
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), 
-            url(../images/nat-5.jpg);
+            url(../img/nat-5.jpg);
         }
 
         &--2 {
             background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), 
-            url(../images/nat-6.jpg);
+            url(../img/nat-6.jpg);
         }
 
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), 
-            url(../images/nat-7.jpg);
+            url(../img/nat-7.jpg);
         }
     }
 
